<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/instruction"
                android:textColor="#33691E" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_1"
                android:textColor="#33691E" />

            <RadioGroup
                android:id="@+id/radio_group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#E6EE9C"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/first_option_for_question_1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/second_option_for_question_1" />

                <RadioButton
                    android:id="@+id/correct_answer_to_question_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/third_option_for_question_1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/fourth_option_for_question_1" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_2"
                android:textColor="#33691E" />

            <RadioGroup
                android:id="@+id/radio_group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#E6EE9C"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/correct_answer_to_question_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/first_option_for_question_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/second_option_for_question_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/third_option_for_question_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/fourth_option_for_question_2" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_3"
                android:textColor="#33691E" />

            <RadioGroup
                android:id="@+id/radio_group_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#E6EE9C"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/first_option_for_question_3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/second_option_for_question_3" />

                <RadioButton
                    android:id="@+id/correct_answer_to_question_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/third_option_for_question_3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/fourth_option_to_question_3" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_4"
                android:textColor="#33691E" />

            <RadioGroup
                android:id="@+id/radio_group_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#E6EE9C"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/correct_answer_to_question_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/first_option_for_question_4" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/second_option_for_question_4" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/third_option_for_question_4" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/fourth_option_for_question_4" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_5"
                android:textColor="#33691E" />

            <EditText
                android:id="@+id/question_5_answer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#E6EE9C"
                android:hint="@string/question_5_hint"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_6"
                android:textColor="#33691E" />

            <CheckBox
                android:id="@+id/wrong_option_1_for_question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="#E6EE9C"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/first_option_for_question_6" />

            <CheckBox
                android:id="@+id/wrong_option_2_for_question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6EE9C"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/second_option_for_question_6" />

            <CheckBox
                android:id="@+id/first_correct_answer_to_question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6EE9C"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/third_option_for_question_6" />

            <CheckBox
                android:id="@+id/second_correct_answer_to_question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E6EE9C"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/fourth_option_for_question_6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="#E6EE9C"
                android:onClick="submitQuiz"
                android:text="@string/submit_button_text"
                android:textAllCaps="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>